<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/rl_financial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_grey_round_rect"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_financial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/financial_summary"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_financial_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_financial"
            android:gravity="center_horizontal"
            android:text="Total Net Worth : 10 Lakhs"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <RelativeLayout
            android:id="@+id/rl_current_spend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_grey_round_rect"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/tv_current_spend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/current_spend"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_current_spend_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_current_spend"
                android:gravity="center_horizontal"
                android:text="20K"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_current_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="2dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_grey_round_rect"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/tv_current_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/current_income"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_current_income_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_current_income"
                android:gravity="center_horizontal"
                android:text="20K"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/bill_reminder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/show_all" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_view_reminder"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/offer" />

        <TextView
            android:id="@+id/tv_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/show_all" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_view_offer"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>